--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# application.global=Global
+application.global=Global
 
 # Router 
 # ~~~~~
@@ -66,3 +66,6 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# URLs
+# ~~~~~
+baseUrl="http://localhost:9000"
